<resources>
    <string name="app_name">Taxi oro cliente</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">OMITIR</string>
    <string name="start">HECHO</string>
    <string name="votre_taxi_en_un_clic">Tu taxi \nen unos pocos clics</string>
    <string name="enter_nyour_information">Ingrese \nsu informacion</string>
    <string name="phone">Teléfono</string>
    <string name="password">Contraseña</string>
    <string name="forgot_your_password">¿Olvidaste tu contraseña?</string>
    <string name="log_in">INICIAR SESIÓN</string>
    <string name="create_customer_account">CREAR CUENTA DE CLIENTE</string>
    <string name="create_driver_account">CREAR CUENTA DE CONDUCTOR</string>
    <string name="last_name">Apellido</string>
    <string name="first_name">Nombre de pila</string>
    <string name="confirm_password">Confirma la contraseña</string>
    <string name="send">ENVIAR</string>
    <string name="already_registered">YA INSCRITO, CONECTE</string>
    <string name="email">Email</string>
    <string name="enter_your_phone_number">Ingrese su número telefónico</string>
    <string name="enter_your_email_address">Ingrese su dirección de correo electrónico</string>
    <string name="enter_your_favorite_name">Ingrese su nombre favorito</string>
    <string name="enter_a_good_phone_number">Ingrese su nombre favorito</string>
    <string name="enter_your_password">Ingresa tu contraseña</string>
    <string name="enter_your_vehicle_brand">Ingrese la marca de su vehículo</string>
    <string name="enter_your_vehicle_model">Ingrese su modelo de vehículo</string>
    <string name="enter_your_vehicle_color">Ingrese el color de su vehículo</string>
    <string name="enter_your_vehicle_numberplate">Ingrese la matrícula de su vehículo</string>
    <string name="enter_your_comment">Ingrese su comentario</string>
    <string name="enter_a_goog_phone_number">Ingrese un buen número de teléfono</string>
    <string name="passwor_requires_at_least_characters">La contraseña requiere al menos 8 caracteres</string>
    <string name="enter_your_new_password">Introduzca su nueva contraseña</string>
    <string name="modifie">Modificada</string>
    <string name="Echec_de_modification">Error al editar</string>
    <string name="current_password_incorrect">La contraseña actual es incorrecta</string>
    <string name="enter_your_current_password">introduce tu contraseña actual</string>
    <string name="reserve_a_taxi">Reservar un taxi</string>
    <string name="create_an_account">Cree una cuenta, elija un viaje, reciba una confirmación de su viaje, haga su viaje, pague y anote al conductor.</string>
    <string name="messaging">Mensajería</string>
    <string name="communicate_to_any_driver_by_calling_or_writing_a_message">Comuníquese con cualquier conductor llamando o escribiendo un mensaje.</string>
    <string name="password_requires">La contraseña requiere al menos 8 caracteres</string>
    <string name="my_status">Mi estado</string>
    <string name="please_wait">Esperando por favor</string>
    <string name="drawer_open">Abrir el cajón de navegación</string>
    <string name="drawer_close">Cerrar el cajón de navegación</string>
    <string name="modification_d_information">Cambiar informacion</string>
    <string name="enregistrer">SALVAR</string>
    <string name="t_l_phone">Teléfono</string>
    <string name="pas_de_connexion_internet">Sin conexión a Internet</string>
    <string name="mot_de_passe_actuel">Contraseña actual</string>
    <string name="nouveau_mot_de_passe">Nueva contraseña</string>
    <string name="confirmez_le_nouveau_mot_de_passe">Confirma la nueva contraseña</string>
    <string name="enter_your_last_name">Ingrese su apellido</string>
    <string name="enter_your_exactly_place">Ingrese su lugar exacto</string>
    <string name="enter_your_number_of_people">Ingrese el número de personas</string>
    <string name="enter_a_number_greater_than">Ingrese un número mayor que 0</string>
    <string name="mot_de_passe_non_identiques">Sin contraseña idéntica</string>
    <string name="return_time">Hora de regreso</string>
    <string name="enter_your_firstname">Ponga su primer nombre</string>
    <string name="enter_amount">Ingrese el monto</string>
    <string name="choose_return_date_time">Elija fecha y hora de regreso</string>
    <string name="item_home">Home</string>
    <string name="item_logout">Desconectar</string>
    <string name="item_contact_us">Contacta con nosotras</string>
    <string name="item_help">Ayuda y asistencia</string>
    <string name="item_new">Nueva</string>
    <string name="item_favorite">Paseo favorito</string>
    <string name="item_profile">Mi perfil</string>
    <string name="item_wallet">Mi billetera</string>
    <string name="item_new_booking">Nueva reserva</string>
    <string name="item_confirmed_booking">Reserva confirmada</string>
    <string name="item_canceled_booking">Reserva cancelada</string>
    <string name="item_louer_vehicule">Alquilar un vehículo</string>
    <string name="item_vehicule_loue">Vehículo alquilado</string>
    <string name="today">Hoy</string>
    <string name="item_onride">En viaje</string>
    <string name="item_completed">Terminada</string>
    <string name="item_canceled">Cancelado</string>
    <string name="item_confirmed">Confirmado</string>
    <string name="this_account_does_not_exist">Esta cuenta no existe</string>
    <string name="enter_another_phone_number">Ingrese otro número de teléfono</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="enter_another_password">Ingrese otra contraseña</string>
    <string name="this_account_is_inactive">Esta cuenta está inactiva. Su información esta siendo procesada</string>
    <string name="depart">Salida</string>
    <string name="where_do_you_going">A dónde vas ?</string>
    <string name="point_de_depart">Punto de partida</string>
    <string name="destination">Destino</string>
    <string name="you_want_to_go_here">Quieres ir aqui</string>
    <string name="your_starting_point">Su punto de partida</string>
    <string name="echec_denvoi">Fallo al enviar</string>
    <string name="disponible">Disponible</string>
    <string name="indisponible">Indisponible</string>
    <string name="annule_avec_succes">Cancelado exitosamente</string>
    <string name="echec_dannulation">Error al cancelar</string>
    <string name="assurez_vous_d_tre_connecter_internet_et_tapez_sur_les_nuages">Asegúrate de conectarte a internet y tocar las nubes</string>
    <string name="pas_de_v_hicule_pour_le_moment">Ningún vehículo por el momento</string>
    <string name="information_sur_la_r_servation">Información de reserva</string>
    <string name="total_payer">Total a pagar</string>
    <string name="nombre_de_jour">Número de días</string>
    <string name="date_d_but">Fecha de inicio</string>
    <string name="date_fin">Fecha final</string>
    <string name="contact">Contacto</string>
    <string name="envoyer">ENVIAR</string>
    <string name="annuler">CANCELAR</string>
    <string name="envoyer_avec_succes">Enviado correctamente</string>
    <string name="close">CERCA</string>
    <string name="do_you_want_to_accept_this_ride">¿Quieres aceptar este paseo?</string>
    <string name="paiement_par_cash">Efectivo</string>
    <string name="m_thode_de_paiement">Forma de pago</string>
    <string name="heure_d_part">Hora de salida</string>
    <string name="the_request_has_been_successfully_validated">La solicitud ha sido validada con éxito</string>
    <string name="distance">Distancia</string>
    <string name="dur_e">Duración</string>
    <string name="co_t">Costo</string>
    <string name="book">ORDENAR AHORA</string>
    <string name="book_now">RESERVAR AHORA</string>
    <string name="book_later">PASEO DE LIBRO</string>
    <string name="cancel">CANCELAR</string>
    <string name="validation_failure">Fallo de validación</string>
    <string name="rating_awarded_successfully">Calificación otorgada con éxito</string>
    <string name="failed_to_assign">Error al asignar</string>
    <string name="failed_to_edit">Error al editar</string>
    <string name="save">SALVAR</string>
    <string name="make_sure_you_connect_to_the_internet_and_tap_cloud">Asegúrate de conectarte a internet y tocar las nubes</string>
    <string name="no_ride_at_the_moment">No paseo en este momento</string>
    <string name="no_favorite_ride_at_the_moment">No hay paseo favorito en este momento</string>
    <string name="no_ride_canceled_at_the_moment">Ningún viaje cancelado en este momento</string>
    <string name="no_review_at_the_moment">Ninguna reseña</string>
    <string name="no_ride_completed_at_the_moment">Ningún viaje completado en este momento</string>
    <string name="no_ride_confirmed_at_the_moment">Ningún viaje confirmado en este momento</string>
    <string name="no_ride_on_ride_at_the_moment">No paseo en paseo en este momento</string>
    <string name="your_booking_as_been_sent_successfully">Su reserva ha sido enviada exitosamente</string>
    <string name="an_error_occurred_while_sending_your_booking">Se produjo un error al enviar su reserva.</string>
    <string name="this_service_requires_the_activation_of_the_gps">Este servicio requiere la activación del servicio GPS. ¿Quieres activar el GPS?</string>
    <string name="failed_try_again">Falló, intente nuevamente</string>
    <string name="model">Modelo</string>
    <string name="brand">Marca</string>
    <string name="color">Color</string>
    <string name="no_drivers_yet">Aún no hay conductoras</string>
    <string name="choose_a_rider">Elige una conductora</string>
    <string name="choose_a_payment_method">Elija un método de pago</string>
    <string name="reject">RECHAZAR</string>
    <string name="deleted_successfull">Borrado exitosamente</string>
    <string name="canceled_successfull">Cancelado exitosamente</string>
    <string name="transaction_successfull">Transacción exitosa</string>
    <string name="rejected_successfull">Rechazado exitosamente</string>
    <string name="confirmed_successfull">Confirmado con éxito</string>
    <string name="on_ride_successfull">En paseo con éxito</string>
    <string name="completed_successfull">Completado satisfactoriamente</string>
    <string name="do_you_want_to_cancel_your_request">¿Quieres cancelar tu viaje?</string>
    <string name="do_you_want_to_delete_this_request">¿Quieres eliminar este paseo favorito?</string>
    <string name="do_you_want_to_confirm_this_ride">¿Quieres confirmar este paseo?</string>
    <string name="do_you_want_to_confirm_this_booking">¿Quieres confirmar esta reserva?</string>
    <string name="do_you_want_to_on_ride_this_ride">¿Quieres montar este paseo?</string>
    <string name="do_you_want_to_reject_this_ride">¿Quieres rechazar este paseo?</string>
    <string name="do_you_want_to_reject_this_booking">¿Quieres rechazar esta reserva?</string>
    <string name="do_you_want_to_complete_this_ride">¿Quieres completar este paseo?</string>
    <string name="vehicle_information">Información del vehículo</string>
    <string name="number_plate">Número de placa</string>
    <string name="your_information_was_sent_well_we_will_treat_them_and_inform_you_after_the_treatment_your_account_will_be_active_after_validation_of_your_information">Su información fue enviada bien. Los trataremos y le informaremos después del tratamiento. Su cuenta estará activa después de la validación de su información.</string>
    <string name="payment_amount">Monto del pago</string>
    <string name="payment_methode">Método de pago</string>
    <string name="payment_made_successfully">Pago realizado con éxito</string>
    <string name="you_need_to_install_google_map_app">Necesita instalar la aplicación de mapas de google</string>
    <string name="total_cost">Coste total</string>
    <string name="days">Dias</string>
    <string name="apply">APLICAR</string>
</resources>