<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.activity.SubscribeActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/lot"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/taxi_final"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

    </ImageView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_firstname_subs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/firstname_subs"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/texto"
                android:drawableRight="@drawable/ic_profile_con"
                android:drawableTint="@color/colorLogoBlack"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_phone_subs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/phone_subs"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/texto"
                android:drawableRight="@drawable/ic_phone_outline"
                android:drawableTint="@color/colorLogoBlack"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="15"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email_insc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="135dp"
            android:layout_marginEnd="15dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/email_insc"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/texto"

                android:drawableRight="@drawable/ic_message_outline"
                android:drawableTint="@color/colorLogoBlack"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password_inc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/password_subs"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/texto"
                android:drawableRight="@drawable/ic_password_outline"
                android:drawableTint="@color/colorLogoBlack"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/password_conf"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/texto"
                android:drawableRight="@drawable/ic_password_outline"
                android:drawableTint="@color/colorLogoBlack"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<CheckBox-->
        <!--android:id="@+id/check_email"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Recevoir de notification par mail" />-->


        <ProgressBar
            android:id="@+id/progressBar_subs"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="4dp">

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/creer_compte"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btnregis"
            android:cursorVisible="false"
            android:gravity="center"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:text="@string/send"
            android:textColor="@color/colorWhite"
            android:textStyle="normal" />

        <Button
            android:id="@+id/i_have_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btnregis"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:text="@string/already_registered"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="normal" />

    </LinearLayout>
</LinearLayout>
